--- a/package.json
+++ b/package.json
@@ -26,5 +26,8 @@
     "passport": "^0.5.2",
     "passport-facebook": "^3.0.0",
     "passport-local": "^1.0.0"
+  },
+  "devDependencies": {
+    "standard": "^16.0.4"
   }
 }
